k2s/test/e2e/addons/ingress/traefik/workloads/ingress-traefik-test-linux-albums.yaml
# SPDX-FileCopyrightText: © 2024 Siemens Healthineers AG
#
# SPDX-License-Identifier: MIT

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: albums-linux1
  namespace: ingress-traefik-test
spec:
  selector:
    matchLabels:
      app: albums-linux1
  replicas: 1
  template:
    metadata:
      labels:
        app: albums-linux1
    spec:
      containers:
        - name: albums-linux1
          image: shsk2s.azurecr.io/example.albums-golang-linux:v1.0.0
          ports:
            - containerPort: 80
          env:
            - name: PORT
              value: '80'
            - name: RESOURCE
              value: 'albums-linux1'
      nodeSelector:
        kubernetes.io/os: linux

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: albums-linux2
  namespace: ingress-traefik-test
spec:
  selector:
    matchLabels:
      app: albums-linux2
  replicas: 1
  template:
    metadata:
      labels:
        app: albums-linux2
    spec:
      containers:
        - name: albums-linux2
          image: shsk2s.azurecr.io/example.albums-golang-linux:v1.0.0
          ports:
            - containerPort: 80
          env:
            - name: PORT
              value: '80'
            - name: RESOURCE
              value: 'albums-linux2'
      nodeSelector:
        kubernetes.io/os: linux

---
apiVersion: v1
kind: Service
metadata:
  name: albums-linux1
  namespace: ingress-traefik-test
spec:
  selector:
    app: albums-linux1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: albums-linux2
  namespace: ingress-traefik-test
spec:
  selector:
    app: albums-linux2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: albums-linux1
  namespace: ingress-traefik-test
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`k2s.cluster.local`) && PathPrefix(`/albums-linux1`)
      kind: Rule
      services:
        - name: albums-linux1
          namespace: ingress-traefik-test
          port: 80

---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: ingress-traefik-test-gateway
  namespace: ingress-traefik-test
spec:
  gatewayClassName: traefik
  listeners:
    - name: http
      protocol: HTTP
      hostname: k2s.cluster.local
      port: 8080
      allowedRoutes:
        namespaces:
          from: All

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: albums-linux2
  namespace: ingress-traefik-test
spec:
  parentRefs:
    - name: ingress-traefik-test-gateway
      namespace: ingress-traefik-test
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /albums-linux2
      backendRefs:
        - name: albums-linux2
          namespace: ingress-traefik-test
          port: 80
