k2s/test/e2e/addons/ingress/traefik/workloads/ingress-traefik-test-namespace.yaml
# SPDX-FileCopyrightText: © 2023 Siemens Healthcare GmbH
#
# SPDX-License-Identifier: MIT

apiVersion: v1
kind: Namespace
metadata:
  name: ingress-traefik-test
