k2s/test/e2e/addons/ingress/traefik/workloads/kustomization.yaml
# SPDX-FileCopyrightText: © 2023 Siemens Healthcare GmbH
#
# SPDX-License-Identifier: MIT

apiVersion: kustomize.config.k8s.io/v1beta1
kind: Kustomization
resources:
- ingress-traefik-test-namespace.yaml
- ingress-traefik-test-linux-albums.yaml
